Updated banner bg for marketplace.

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "Themes"
   ],
   "galleryBanner": {
-    "color": "#5a524c",
+    "color": "#32302f",
     "theme": "dark"
   },
   "repository": {
